--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-<div id="js-main" class="main">
-
-</div>
-<script src="./index.ts"></script>
+    <div id="app"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
