--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>parcel app</title><link rel="stylesheet" href="index.85abf063.css"></head><body> <div id="app"></div> <script type="module" src="index.c866cefe.js"></script> </body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"><title>Wordle Solver</title><link rel="stylesheet" href="index.85abf063.css"></head><body> <div id="app"></div> <script type="module" src="index.75254114.js"></script> </body></html>
